--- a/LoveTime/Love.html
+++ b/LoveTime/Love.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>爱你永不停❤</title>
 <link href="css.css" rel="stylesheet" type="text/css" />
+<link rel="shortcut icon" href="heart.ico" type="image/x-icon" />
 </head>
 
 <body>
