--- a/MyHeart/MyHeart.html
+++ b/MyHeart/MyHeart.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>ღ( ´･ᴗ･` )比心</title>
+	<link rel="shortcut icon" href="heart.ico" type="image/x-icon" />
 	<style>
 		body{
 			margin: 0;
