--- a/3D/3D.html
+++ b/3D/3D.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>心爱的小姐姐</title>
-    <link rel="shortcut icon" href="heart.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/heart.ico" type="image/x-icon" />
     <style>
         *{
             padding: 0;
