--- a/LoveTime/Love.html
+++ b/LoveTime/Love.html
@@ -12,8 +12,8 @@
 <canvas id="pinkboard"></canvas>
 
 <div class="content">
-    <h2>张慧慧，我们在一起了</h2>
     <div class="timer">
+        <b>HuiHui ChenXi</b><br>
         <b id="d"></b>天 <b id="h"></b> 时 <b id="m"></b> 分 <b id="s"></b> 秒
     </div>
 </div>
